# WhatToWear

./: Dockerfile  app.py  docker-compose.yml  index.html  pyproject.toml  requirements.txt
config/: closet.json  outfits.yaml  rules.yaml
html/: index.html
html/js/: clothing.js  ui.js  weather_icons_custom.json
html/js/modules/: clothing_selector.js
js/: bundle.js  clothing.js  package-lock.json  package.json
nginx/templates/: clothing.conf.template
routes/: api.py
whattowear/: __init__.py  app.py
whattowear/config/: outfits.yaml
whattowear/providers/: __init__.py  open_meteo.py
whattowear/routes/: api.py  api_v2.py  closet_api.py  providers.py  rules_engine.py
